@@ -181,7 +181,9 @@ public class FormatterVisitor extends BaseTypeVisitor<FormatterAnnotatedTypeFact
         // than required, but a warning is issued."
         // The format.missing.arguments warning is issued here for assignments.
         // For method calls, it is issued in visitMethodInvocation.
-        if (AnnotationUtils.areSameByName(rhs, atypeFactory.FORMAT)
+        if (rhs != null
+                && lhs != null
+                && AnnotationUtils.areSameByName(rhs, atypeFactory.FORMAT)
                 && AnnotationUtils.areSameByName(lhs, atypeFactory.FORMAT)) {
             ConversionCategory[] rhsArgTypes =
                     atypeFactory.treeUtil.formatAnnotationToCategories(rhs);
