@@ -88,7 +88,7 @@ public class AnnotationUtils {
      * @param a2 the second AnnotationMirror to compare
      * @return true iff a1 and a2 are the same annotation
      */
-    public static boolean areSame(@Nullable AnnotationMirror a1, @Nullable AnnotationMirror a2) {
+    public static boolean areSame(AnnotationMirror a1, AnnotationMirror a2) {
         if (a1 == a2) {
             return true;
         }
@@ -117,13 +117,15 @@ public class AnnotationUtils {
      * @see #areSame(AnnotationMirror, AnnotationMirror)
      * @return true iff a1 and a2 have the same annotation name
      */
-    public static boolean areSameByName(
-            @Nullable AnnotationMirror a1, @Nullable AnnotationMirror a2) {
+    public static boolean areSameByName(AnnotationMirror a1, AnnotationMirror a2) {
         if (a1 == a2) {
             return true;
         }
-        if (a1 == null || a2 == null) {
-            return false;
+        if (a1 == null) {
+            throw new BugInCF("Unexpected null first argument to areSameByName");
+        }
+        if (a2 == null) {
+            throw new BugInCF("Unexpected null second argument to areSameByName");
         }
 
         return annotationName(a1).equals(annotationName(a2));
